# Ateams

./: .cproject  .envrc  .gitignore  .hgignore  .project  Annealing.h  Ateams.code-workspace  Ateams.dev  Ateams.kdev4  Ateams.layout  Ateams.py  Ateams_private.h  Configure.py  JobShop.h  Justfile  Makefile  Makefile.mk  Makefile.win  Makefile_Base  ateams  ateams.c  build.ninja  build_Linux.ninja  build_Windows.ninja  genetico.c  io.c  io.h  lista.c  lista.h  makespan.c  memoria.c  memoria.h  ninja.py  politicasMemoria.c  politicasMemoria.h  pyproject.toml  solucoes.c  solucoes.h  tabu.c  tabu.h  (+3 more)
.kdev4/: Ateams.kdev4
Ateams_Base/: .cproject  .project  Makefile
BinPacking/: .cproject  .project  Makefile  Makefile.orig
C/: .cproject  .project  Makefile  ateams.c  defs.h  genetico.c  genetico.h  io.c  io.h  lista.h  makespan.c  makespan.h  solucoes.c  tabu.c
C++/: .cproject  .project  Annealing.cpp  Annealing.h  Ateams  Ateams.cpp  Ateams.h  Controle.cpp  Controle.h  Genetico.cpp  Genetico.h  Heuristica.h  JobShop.cpp  JobShop.h  Makefile  Problema.h  Tabu.cpp  Tabu.h
Core/: .cproject  .project  Makefile
FlowShop/: .cproject  .project  Makefile  Makefile.orig
GraphColoring/: .cproject  .project  Makefile  Makefile.orig
JobShop/: .cproject  .project  Ateams.dev  Makefile  Makefile.win
KnapSack/: .cproject  .project  Makefile  Makefile.orig
TravellingSalesman/: .cproject  .project  Makefile  Makefile.orig
dados/: README  VALUES  abz5.prb  abz6.prb  abz7.prb  abz8.prb  car3.prb  car8.prb  jsp_gen  jsp_gen.c  la01.prb  la08.prb  la10.prb  la16.prb  la25.prb  (+65 more)
(+814 files in other folders)
