[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["Ateams", "ninja"]

[project]
name = "Ateams"
version = "1.0.0"
authors = [
    { name="Rafael Baboni Dominiquini", email="rafaeldominiquini@gmail.com" },
]
requires-python = ">=3.8"
dependencies = ["ninja-syntax", "click", "click-prompt", "rich-click"]

[project.scripts]
Ateams = "Ateams:ateams"

[egg_info]
egg_basse = ".Ateams/"
